# rust_macro_tutorial

./: .gitignore  README.md
.ruby-lsp/: last_updated  main_lockfile_hash
docs/: 000_intro.md  010_create_the_trait.md  020_proc_macro_start.md  030_field_start.md  040_container_start.md  050_proc_macro_basic_works.md  060_understanding_attributes.md  070_add_field_attributes.md  080_add_container_attributes.md  090_proc_macro_complete.md  RUNDOC.md  add_field_attributes.md  container_attribute_first.md  container_start.md  create_the_trait.md  doc_driven_development.md  field_attribute.md  field_attribute_first.md  field_start.md  proc_macro_complete.md  proc_macro_simple.md  proc_macro_start.md  setup.md
docs/rundoc_output/: README.md  setup.rb
docs/rundoc_output/cache_diff/: .gitignore  Cargo.toml
docs/rundoc_output/cache_diff/cache_diff/: Cargo.toml
docs/rundoc_output/cache_diff/cache_diff/src/: lib.rs
docs/rundoc_output/cache_diff/cache_diff/tests/fails/: duplicate_attribute.rs  duplicate_attribute.stderr  ignore_and_others.rs  ignore_and_others.stderr  multiple_unknown.rs  multiple_unknown.stderr
docs/rundoc_output/cache_diff/cache_diff_derive/: Cargo.toml
docs/rundoc_output/cache_diff/cache_diff_derive/src/: lib.rs  parse_container.rs  parse_field.rs  shared.rs
script/: setup.rb
